added enable-native-access